--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1685,7 +1685,7 @@ ul.essayage_list li > div > div {
     background-color: #FFF;
     z-index: 9999999;
     position: absolute;
-    padding-top: 100px;
+    padding-top: 80px;
     text-align: center;
     cursor: pointer;
     top:0;
@@ -2428,7 +2428,76 @@ ul.usefull_for li::before {
 }
 
 
+.above_list_optk.on_opticien table.tab17 {
+    margin: 10px 0 30px 0;
+    width: 100%;
+}
+.above_list_optk.on_opticien table.tab17 tr td {
+    width:33%;
+    text-align: center;
+    font-weight: normal;
+    color: #ababab;
+    font-size: 11px;
+    vertical-align: top;
+}
+.above_list_optk.on_opticien table.tab17 tr td div {
+    width: 82px;
+    height: 82px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 2px 4px #bdbdbd;
 
+}
+.above_list_optk.on_opticien table.tab17 tr td div img {
+    width:67%;
+}
+.above_list_optk.on_opticien table.tab17 tr td div span {
+    display: block;
+    position: absolute;
+    margin-top: 65px;
+    font-size: 9px;
+    text-align: center;
+    width: 82px;
+}
+
+/**/
+
+
+.above_list_optk.on_opticien table.tab15 {
+    margin: 10px 0;
+    width: 100%;
+}
+.above_list_optk.on_opticien table.tab15 tr td {
+    width:33%;
+    text-align: center;
+    font-weight: normal;
+    color: #ababab;
+    font-size: 11px;
+    vertical-align: top;
+}
+.above_list_optk.on_opticien table.tab15 tr td div {
+    width: 82px;
+    height: 94px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 2px 4px #bdbdbd;
+
+}
+.above_list_optk.on_opticien table.tab15 tr td div img {
+    width:62%;
+}
+.above_list_optk.on_opticien table.tab15 tr td div span {
+    position: absolute;
+    display: block;
+    width: 82px;
+    text-align: center;
+    margin-top:55px;
+    font-size: 8.5px;
+}
 
 
 
